Update style formatting.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,157 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><link rel="stylesheet" href="./css/style.css"></head><body><header class="header-banner" id="isbj"><div class="container-width" id="i9nb"><div class="logo-container" id="ix2p"><div class="logo" id="idq1">Freeman B&amp;E<br/></div></div><nav class="menu"></nav><div class="clearfix"></div><div class="lead-title" id="ijsj4">Cocktails<br/></div></div></header><section class="flex-sect" id="ia914i"><div class="container-width"><div class="flex-title" id="i48spy">Originals</div><div class="flex-desc" id="izis9a">Turkey Tom Collins<br/></div><div class="flex-desc" id="ih5w5f"><div><div><i>gin, cranberry + lemon</i><br/></div></div></div><div class="flex-desc" id="ideoff">C75<br/></div><div class="flex-desc" id="i0s1mf"><div><div><i>gin, cranberry + bubbles</i><br/></div></div></div><div class="flex-desc" id="i4m713">Pom Pom 75<br/></div><div class="flex-desc" id="i2jplt"><div><div><div><i>gin, pomegranate + bubbles</i><i><br/></i></div></div></div></div><div class="flex-desc" id="iul9jg">Pilgrim Old Fashioned<br/></div><div class="flex-desc" id="irqxum"><div><i>irish whiskey, apple cider, cinnamon stick, maple + bitters<br/></i></div></div><div class="flex-desc" id="ior6ys">Border Smoke<br/></div><div class="flex-desc" id="ib6pbk"><i>mezcal, orange liquer, cranberry + lime<br/></i></div><div class="flex-desc" id="ikmg7l">Flying Mule<br/></div><div class="flex-desc" id="ic2yqh"><div><div><div><i>gin, ginger beer, cranberry + lime</i><i><br/></i></div></div></div></div></div></section><section class="blk-sect" id="iky3a"><div class="container-width" id="i3tzs"><div class="blk-title" id="i82pd">By the glass<br/></div><div class="blk-desc" id="ih9ko"><div>Cowboys and Indians Sangria</div><div><br/></div><div>Prosecco</div><div><br/></div><div>House Wine<br/></div></div><div class="price-cards"></div></div></section><section class="flex-sect" id="i3pfg"><div class="container-width" id="i8k8a"><div class="flex-title" id="i9t4a">Non-Alcoholic</div><div class="flex-desc" id="injheg">Apple Cider Punch<br/></div><div class="flex-desc" id="iqob3d"><div><div><i><i>apple cider</i>, cranberry + lemon, bubbles</i><br/></div></div></div><div class="flex-desc" id="iwuwk4">Flamin&#039; Cinnamon Cider<br/></div><div class="flex-desc" id="ihq6jh"><div><div><i><i>apple cider</i>, red hots + apple slices<br/></i></div></div><i><br/></i></div></div></section></body><html>
+<header class="header-banner" id="isbj">
+  <div class="container-width" id="i9nb">
+    <div class="logo-container" id="ix2p">
+      <div class="logo" id="idq1">Freeman B&amp;E
+        <br/>
+      </div>
+    </div>
+    <nav class="menu">
+    </nav>
+    <div class="clearfix">
+    </div>
+    <div class="lead-title" id="ijsj4">Cocktails
+      <br/>
+    </div>
+  </div>
+</header>
+<section class="flex-sect" id="ia914i">
+  <div class="container-width">
+    <div class="flex-title" id="i48spy">Originals
+    </div>
+    <div class="flex-desc" id="izis9a">Turkey Tom Collins
+      <br/>
+    </div>
+    <div class="flex-desc" id="ih5w5f">
+      <div>
+        <div>
+          <i>gin, cranberry + lemon
+          </i>
+          <br/>
+        </div>
+      </div>
+    </div>
+    <div class="flex-desc" id="ideoff">C75
+      <br/>
+    </div>
+    <div class="flex-desc" id="i0s1mf">
+      <div>
+        <div>
+          <i>gin, cranberry + bubbles
+          </i>
+          <br/>
+        </div>
+      </div>
+    </div>
+    <div class="flex-desc" id="i4m713">Pom Pom 75
+      <br/>
+    </div>
+    <div class="flex-desc" id="i2jplt">
+      <div>
+        <div>
+          <div>
+            <i>gin, pomegranate + bubbles
+            </i>
+            <i>
+              <br/>
+            </i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="flex-desc" id="iul9jg">Pilgrim Old Fashioned
+      <br/>
+    </div>
+    <div class="flex-desc" id="irqxum">
+      <div>
+        <i>irish whiskey, apple cider, cinnamon stick, maple + bitters
+          <br/>
+        </i>
+      </div>
+    </div>
+    <div class="flex-desc" id="ior6ys">Border Smoke
+      <br/>
+    </div>
+    <div class="flex-desc" id="ib6pbk">
+      <i>mezcal, orange liquer, cranberry + lime
+        <br/>
+      </i>
+    </div>
+    <div class="flex-desc" id="ikmg7l">Flying Mule
+      <br/>
+    </div>
+    <div class="flex-desc" id="ic2yqh">
+      <div>
+        <div>
+          <div>
+            <i>gin, ginger beer, cranberry + lime
+            </i>
+            <i>
+              <br/>
+            </i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="blk-sect" id="iky3a">
+  <div class="container-width" id="i3tzs">
+    <div class="blk-title" id="i82pd">By the glass
+      <br/>
+    </div>
+    <div class="blk-desc" id="ih9ko">
+      <div>Cowboys and Indians Sangria
+      </div>
+      <div>
+        <br/>
+      </div>
+      <div>Prosecco
+      </div>
+      <div>
+        <br/>
+      </div>
+      <div>House Wine
+        <br/>
+      </div>
+    </div>
+    <div class="price-cards">
+    </div>
+  </div>
+</section>
+<section class="flex-sect" id="i3pfg">
+  <div class="container-width" id="i8k8a">
+    <div class="flex-title" id="i9t4a">Non-Alcoholic
+    </div>
+    <div class="flex-desc" id="injheg">Apple Cider Punch
+      <br/>
+    </div>
+    <div class="flex-desc" id="iqob3d">
+      <div>
+        <div>
+          <i>
+            <i>apple cider
+            </i>, cranberry + lemon, bubbles
+          </i>
+          <br/>
+        </div>
+      </div>
+    </div>
+    <div class="flex-desc" id="iwuwk4">Flamin&#039; Cinnamon Cider
+      <br/>
+    </div>
+    <div class="flex-desc" id="ihq6jh">
+      <div>
+        <div>
+          <i>
+            <i>apple cider
+            </i>, red hots + apple slices
+            <br/>
+          </i>
+        </div>
+      </div>
+      <i>
+        <br/>
+      </i>
+    </div>
+  </div>
+</section>
